# geoipupdate

./: .gitignore  .golangci.toml  .golangci.yml  .goreleaser-packages.yml  .goreleaser-windows.yml  .goreleaser.yml  .precious.toml  .prettierrc.json  .travis.yml  .yamllintrc  CHANGELOG.md  ChangeLog.md  Dockerfile  Gopkg.toml  Makefile  Makefile.am  README.dev.md  README.md  _config.yml  bootstrap  configure.ac  go.mod  go.sum  lychee.toml  mise.toml  proto.yaml
.github/: dependabot.yml
.github/workflows/: check-untagged-deps.yml  codeql-analysis.yml  go.yml  golangci-lint.yml  modver.yml  pages.yml  precious.yml
_layouts/: default.html
apps/: Makefile.am  geoipupdate-pureperl.pl  geoipupdate.c  geoipupdate.h  geoipupdate_s.c  md5.c  product_s.c
charts/geoipupdate/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
charts/geoipupdate/templates/: NOTES.txt  _helpers.tpl  cronjob.yaml  deployment.yaml  pvc.yaml  service-account.yaml
client/: client.go  download.go  download_test.go  metadata.go  metadata_test.go
cmd/geoipupdate/: args.go  config.go  config_test.go  defaults_notwin.go  defaults_win.go  defaults_windows.go  end_to_end_test.go  main.go  main_test.go  version.go
conf/: GeoIP.conf.default  GeoIP.env.default  Makefile.am
debian/: README.debian  changelog  control  copyright  deb-build.pl  dirs  files  install  manpages  rules
dev-bin/: clang-format-all.sh  deb-build.pl  make-man-pages.pl  ppa-release.sh  release.sh  uncrustify-all.sh
doc/: GeoIP.conf.md  GeoIP.env.md  docker.md  geoipupdate.md
docker/: Dockerfile  entry.sh  healthcheck.sh
docs/: hugo.toml
docs/layouts/_default/: default.html
docs/layouts/_default/_markup/: render-link.html
internal/: errors.go  errors_test.go  file_lock_test.go  job_processor.go  job_processor_test.go
internal/geoipupdate/: config.go  config_test.go  geoip_updater.go  geoip_updater_test.go
internal/geoipupdate/database/: http_reader.go  http_reader_test.go  local_file_writer.go  local_file_writer_test.go  reader.go  writer.go
internal/vars/: defaults_notwin.go  defaults_windows.go  version.go
man/: GeoIP.conf.5.in  Makefile.am  geoipupdate.1.in
pkg/geoipupdate/: config.go  config_test.go  defaults_notwin.go  defaults_windows.go  geoip_updater.go  geoip_updater_test.go  output.go  output_test.go  version.go
pkg/geoipupdate/api/: api.go  http.go  http_test.go
pkg/geoipupdate/config/: config.go  config_test.go
pkg/geoipupdate/database/: http_reader.go  http_reader_test.go  local_file_lock.go  local_file_lock_test.go  local_file_writer.go  local_file_writer_test.go  reader.go  s3_file_writer.go  writer.go  writer_test.go
pkg/geoipupdate/download/: download.go  download_test.go  metadata.go  metadata_test.go  output.go  output_test.go  writer.go  writer_test.go
pkg/geoipupdate/httpclient/: httpclient.go  httpclient_test.go
pkg/geoipupdate/internal/: errors.go  errors_test.go  file_lock.go  file_lock_test.go  job_processor.go  job_processor_test.go  retry.go  retry_test.go
pkg/geoipupdate/lock/: file_lock.go  file_lock_test.go  lock.go
pkg/geoipupdate/retry/: retry.go  retry_test.go
pkg/geoipupdate/vars/: logger.go  version.go
pkg/geoipupdate/writer/: disk.go  disk_test.go  writer.go
src/: GeoIPUpdate.c  GeoIPUpdate.h  Makefile.am  base64.c  base64.h  global.h
